--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
   </head>
-  <body>
+  <body id="back">
      <input type="radio" id="btn-1" name="toggle" checked>
      <input type="radio" id="btn-2" name="toggle">
      <input type="radio" id="btn-3" name="toggle">
@@ -18,34 +18,43 @@
                           <img src="img/index/logo.svg" alt="">
                      </div>
                      <ul class="main-menu">
-                          <li><a href="#" class="not-hover">Каталог</a>
+                          <li><a href="#">Каталог</a>
                                   <ul class="catalog-menu">
-                                      <li><a href="#" class="catalog-menu-new not-hover">Новинки</a></li>
-                                      <li><a href="catalog.html" class="not-hover">Сливочное</a></li>
-                                      <li><a href="#" class="not-hover">Щербеты</a></li>
-                                      <li><a href="#" class="not-hover">Фруктовый лед</a></li>
-                                      <li><a href="#" class="not-hover">Мелорин</a></li>
+                                      <li><a href="#" class="catalog-menu-new">Новинки</a></li>
+                                      <li><a href="catalog.html">Сливочное</a></li>
+                                      <li><a href="#" >Щербеты</a></li>
+                                      <li><a href="#">Фруктовый лед</a></li>
+                                      <li><a href="#" class="catalog-menu-last">Мелорин</a></li>
                                   </ul>
                           </li>
-                          <li><a href="#" class="not-hover">Доставка и оплата</a></li>
-                          <li><a href="#" class="not-hover">О Компании</a></li>
+                          <li><a href="#">Доставка и оплата</a></li>
+                          <li><a href="#">О Компании</a></li>
                       </ul>
                   </nav>
-                  <div class="user-block">
-                      <div class="search">
+              <div class="user-block">
+                  <div class="search">
                           <a href="#" class="search-icon"></a>
                           <div class="search-hover">
                               <form action="#" method="get">
-                                  <input type="search" name="search" placeholder="Что ищем?">
+                                  <input type="search" name="search" id="search">
+                                  <div class="label-box">
+                                      <label for="search">Что ищем?</label>
+                                  </div>
                               </form>
                           </div>
                       </div>
                       <div class="user">
-                          <a href="#" class="login-icon not-hover">Вход</a>
+                          <a href="#" class="login-icon">Вход</a>
                           <div class="user-hover">
                               <form action="#" method="post">
-                                  <input type="email" name="email" placeholder="Электронная почта">
-                                  <input type="password" name="password" placeholder="Пароль">
+                                  <input type="email" name="email" id="email">
+                                  <div class="label-box">
+                                      <label for="email">Электронная почта</label>
+                                  </div>
+                                  <input type="password" name="password" id="password">
+                                  <div class="label-box">
+                                      <label for="password">Пароль</label>
+                                  </div>
                                   <input type="submit" name="login" value="Войти" class="button">
                                   <a href="#">Забыли пароль?</a>
                                   <a href="#">Новая регистрация</a>
@@ -53,7 +62,7 @@
                           </div>
                       </div>
                       <div class="basket">
-                          <a href="#" class="basket-icon not-hover">Пусто</a>
+                          <a href="#" class="basket-icon">Пусто</a>
                       </div>
                   </div>
               </div>    
@@ -67,17 +76,17 @@
                       <div class="slide" id="slide1">
                           <h1 class="slide-title"> Крем-брюле и пломбир 
                            с&nbspмалиновым джемом</h1>
-                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
+                          <a href="#" class="slider-button">Давайте оба!</a>
                       </div>
                       <div class="slide" id="slide2">
                           <h1 class="slide-title">Шоколадный пломбир
                            и&nbspлимонный сорбет </h1>
-                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
+                          <a href="#" class="slider-button">Давайте оба!</a>
                       </div>
                       <div class="slide" id="slide3">
                           <h1 class="slide-title"> Пломбир с помадкой
                             и&nbspклубничный щербет</h1>
-                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
+                          <a href="#" class="slider-button">Давайте оба!</a>
                       </div>
                       <div class="slider-controls">
                           <label for="btn-1"></label>
@@ -104,7 +113,7 @@
                                   <img src="img/index/1.png" alt="Изображение товара">
                                   <span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
-                              <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                              <a href="#" class="goods-title link-color">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                               <a href="#" class="button">Быстрый просмотр</a>
                           </div>
                       </article>
@@ -114,7 +123,7 @@
                                   <img src="img/index/2.png" alt="Изображение товара">
                                   <span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
-                              <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
+                              <a href="#" class="goods-title link-color">Сливочно-кофейное с кусочками шоколада</a>
                               <a href="#" class="button">Быстрый просмотр</a>
                           </div>
                       </article>
@@ -124,7 +133,7 @@
                                   <img src="img/index/3.png" alt="Изображение товара">
                                   <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
-                              <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                              <a href="#" class="goods-title link-color">Сливочно-клубничное с присыпкой из белого шоколада</a>
                               <a href="#" class="button">Быстрый просмотр</a>
                           </div>
                       </article>
@@ -134,7 +143,7 @@
                                   <img src="img/index/4.png" alt="Изображение товара">
                                   <span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
-                              <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
+                              <a href="#" class="goods-title link-color">Сливочное крем-брюле с карамельной подливкой</a>
                               <a href="#" class="button">Быстрый просмотр</a>
                           </div>
                       </article>
@@ -161,12 +170,15 @@
                   <div class="news">
                       <div class="news-block news-left">
                           <span class="name">Новое в нашем блоге</span>
-                          <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к&nbspстолу</a>
+                          <a href="#" class="news-title link-color">10 способов сервировки фруктовых щербетов к&nbspстолу</a>
                       </div>
                       <div class="news-block news-right clearfix">
                           <p class="sub-text">Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
                           <form action="#" method="post">
-                              <input type="email" placeholder="Электронная почта" id="email">
+                              <input type="email" name="email" id="email">
+                                  <div class="label-box">
+                                      <label for="email">Электронная почта</label>
+                                  </div>
                               <input type="submit" value="Отправить" class="button">
                           </form>
                       </div>
@@ -198,11 +210,11 @@
                   <section class="footer-menu">
                       <div class="footer-menu-left">
                           <a href="#" class="footer-active">Для&nbspпоставщиков</a>
-                          <a href="#" class="footer-active">О&nbspпроизводстве</a>
+                          <a href="#">О&nbspпроизводстве</a>
                       </div>
                       <div class="footer-menu-right">
-                          <a href="#" class="footer-active">Наши&nbspдокументы</a>
-                          <a href="#" class="footer-active">Экологические&nbspстандарты</a>
+                          <a href="#">Наши&nbspдокументы</a>
+                          <a href="#"> Экологические&nbspстандарты</a>
                       </div>
                   </section>
                   <section class="html-academy">
@@ -213,31 +225,49 @@
                   </section>
               </div>
           </footer>
+          </div>
       </div>
-      <div class="feedback clearfix">
-         <span class="feedback-title">Мы обязательно вам ответим!</span>
-          <form action="#" method="get">
-              <input type="text" placeholder="Как вас зовут?">
-              <input type="email" placeholder="Ваша почта для ответа?">
-              <textarea name="feedback-text" cols="30" rows="8" placeholder="Напишите что-нибудь..."></textarea>
-              <input type="submit" value="Отправить" class="button">
-          </form>
-      </div>
+          <div class="back"></div>
+          <div class="feedback clearfix">
+            <div class="feedback-close"></div>
+             <span class="feedback-title">Мы обязательно вам ответим!</span>
+              <form action="#" method="get">
+                  <input type="text" id="name">
+                  <div class="label-box">
+                      <label for="name">Как вас зовут?</label>
+                  </div>
+                  <input type="email" name="email" id="email">
+                  <div class="label-box">
+                      <label for="email">Ваша почта для ответа</label>
+                  </div>
+                  <textarea name="feedback-text" cols="30" rows="8" placeholder="Напишите что-нибудь..."></textarea>
+                  <input type="submit" value="Отправить" class="button">
+              </form>
+          </div>  
   </body>
   <script>
       var link=document.querySelector(".feedback-form-btn");
       var popup=document.querySelector(".feedback");
       var close=popup.querySelector(".feedback-close");
       var login=popup.querySelector("[name-login]");
+      var back=document.querySelector(".back");
       
       link.addEventListener("click", function(event) {
                             event.preventDefault();
                             popup.classList.add("feedback-show");
                             login.focus();
                             })
+      link.addEventListener("click", function(event) {
+                            event.preventDefault();
+                            back.classList.add("back-show");
+                            })  
       close.addEventListener("click", function(event) {
                             event.preventDefault();
                             popup.classList.remove("feedback-show");
+                            })
+      close.addEventListener("click", function(event) {
+                            event.preventDefault();
+                            back.classList.remove("back-show");
                             })
   </script>
 </html>
