--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 					</section>
 				</div>
 				<div class="items clearfix">
-					<article class="item hit-icon">
-						<div class="item-active">
+					<article class="item">
+						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/1.png" alt="Изображение товара">
 								<span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
@@ -117,8 +117,8 @@
 							<a href="#" class="button">Быстрый просмотр</a>
 						</div>
 					</article>
-					<article class="item hit-icon">
-						<div class="item-active">
+					<article class="item">
+						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/2.png" alt="Изображение товара">
 								<span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
@@ -127,8 +127,8 @@
 							<a href="#" class="button">Быстрый просмотр</a>
 						</div>
 					</article>
-					<article class="item hit-icon">
-						<div class="item-active">
+					<article class="item">
+						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/3.png" alt="Изображение товара">
 								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
@@ -137,8 +137,8 @@
 							<a href="#" class="button">Быстрый просмотр</a>
 						</div>
 					</article>
-					<article class="item hit-icon">
-						<div class="item-active">
+					<article class="item ">
+						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/4.png" alt="Изображение товара">
 								<span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
@@ -152,10 +152,10 @@
 					<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
 					<div class="features-left">
 						<div class="feature feature-ice-icon">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbspсовременного оборудования и проверенных временем технологий.</p>
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbspсовременного оборудования&nbspи проверенных временем технологий.</p>
 						</div>
 						<div class="feature feature-nature-icon">
-							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+							<p>Для приготовления мороженого используются&nbspнастоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 						</div>
 					</div>
 					<div class="features-right">
@@ -173,15 +173,21 @@
 						<a href="#" class="news-title link-color">10 способов сервировки фруктовых щербетов к&nbspстолу</a>
 					</div>
 					<div class="news-block news-right clearfix">
-						<p class="sub-text">Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+					<div class="news-right-content clearfix">
+						<div class="sub-text">Подпишись на нашу сладкую рассылку и&nbspбудете&nbspвсегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
 						<form action="#" method="post">
+						<div class="news-email">
 							<input type="email" name="email" id="email">
 							<div class="label-box">
 								<label for="email">Электронная почта</label>
 							</div>
+						</div>
+						<div class="news-submit">
 							<input type="submit" value="Отправить" class="button">
+						</div>
 						</form>
 					</div>
+				</div>
 				</div>
 		</div>
 		<div class="map">
