--- a/catalog.html
+++ b/catalog.html
@@ -46,9 +46,9 @@
                         <a href="#" class="login-icon">Вход</a>
                         <div class="user-hover">
                             <form action="#" method="post">
-                                <input type="email" name="email" id="email">
+                                <input type="email" name="email" id="email-login">
                                 <div class="label-box">
-                                    <label for="email">Электронная почта</label>
+                                    <label for="email-login">Электронная почта</label>
                                 </div>
                                 <input type="password" name="password" id="password">
                                 <div class="label-box">
@@ -65,13 +65,13 @@
                         <div class="basket-hover">
                             <table class="basket-hover-back" cellspacing="8">
                                 <tr>
-                                    <td class="basket-img"><img src="img/index/1.png" width="33px" height="33px" alt=""></td>
+                                    <td class="basket-img"><img src="img/index/1.png" width="33" height="33" alt=""></td>
                                     <td class="basket-title">Пломбир с апельсиновым джемом</td>
                                     <td class="basket-price">1,5 кг x 200 руб.</td>
                                     <td class="basket-concl">300 руб.</td>
                                 </tr>
                                 <tr>
-                                    <td class="basket-img"><img src="img/index/3.png" width="33px" height="33px" alt=""></td>
+                                    <td class="basket-img"><img src="img/index/3.png" width="33" height="33" alt=""></td>
                                     <td class="basket-title">Клубничный пломбир с присыпкой из белого шоколада</td>
                                     <td class="basket-price">1,5 кг x 300 руб.</td>
                                     <td class="basket-concl">450 руб.</td>
@@ -304,5 +304,4 @@
         </div>
     </div>
 </body>
-
 </html>
