--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 						<a href="#" class="login-icon">Вход</a>
 						<div class="user-hover">
 							<form action="#" method="post">
-								<input type="email" name="email" id="email">
+								<input type="email" name="email" id="email-login">
 								<div class="label-box">
-									<label for="email">Электронная почта</label>
+									<label for="email-login">Электронная почта</label>
 								</div>
 								<input type="password" name="password" id="password">
 								<div class="label-box">
@@ -75,17 +75,17 @@
 				<div class="slider">
 					<div class="slide" id="slide1">
 						<h1 class="slide-title"> Крем-брюле и пломбир 
-                           с&nbspмалиновым джемом</h1>
+                           с&nbsp;малиновым джемом</h1>
 						<a href="#" class="slider-button">Давайте оба!</a>
 					</div>
 					<div class="slide" id="slide2">
 						<h1 class="slide-title">Шоколадный пломбир
-                           и&nbspлимонный сорбет </h1>
+                           и&nbsp;лимонный сорбет </h1>
 						<a href="#" class="slider-button">Давайте оба!</a>
 					</div>
 					<div class="slide" id="slide3">
 						<h1 class="slide-title"> Пломбир с помадкой
-                            и&nbspклубничный щербет</h1>
+                            и&nbsp;клубничный щербет</h1>
 						<a href="#" class="slider-button">Давайте оба!</a>
 					</div>
 					<div class="slider-controls">
@@ -97,7 +97,7 @@
 				<div class="stocks">
 					<section class="stock stock-left clearfix">
 						<h2>Малинка даром!</h2>
-						<p>При покупке 2 кг любого фруктового мороженого, добавим в&nbspваш заказ банку малинового варенья бесплатно</p>
+						<p>При покупке 2 кг любого фруктового мороженого, добавим в&nbsp;ваш заказ банку малинового варенья бесплатно</p>
 						<a href="#" class="button">Хочу варенье!</a>
 					</section>
 					<section class="stock stock-right">
@@ -111,7 +111,7 @@
 						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/1.png" alt="Изображение товара">
-								<span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
+								<span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -121,7 +121,7 @@
 						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/2.png" alt="Изображение товара">
-								<span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
+								<span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-кофейное с кусочками шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -131,7 +131,7 @@
 						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/3.png" alt="Изображение товара">
-								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
+								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-клубничное с присыпкой из белого шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -141,7 +141,7 @@
 						<div class="item-active hit-icon">
 							<div class="item-top">
 								<img src="img/index/4.png" alt="Изображение товара">
-								<span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
+								<span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное крем-брюле с карамельной подливкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -152,42 +152,42 @@
 					<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
 					<div class="features-left">
 						<div class="feature feature-ice-icon">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbspсовременного оборудования&nbspи проверенных временем технологий.</p>
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbsp;современного оборудования&nbsp;и проверенных временем технологий.</p>
 						</div>
 						<div class="feature feature-nature-icon">
-							<p>Для приготовления мороженого используются&nbspнастоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+							<p>Для приготовления мороженого используются&nbsp;настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 						</div>
 					</div>
 					<div class="features-right">
 						<div class="feature feature-meat-icon">
-							<p>Закупка ингредиентов производится только у&nbspпроверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+							<p>Закупка ингредиентов производится только у&nbsp;проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						</div>
 						<div class="feature feature-ship-icon">
-							<p>Доставка нашего мороженого до заказчиков&nbspосуществляется в специальном термопаке, который не дает мороженому растаять&nbspв пути и позволяет сохранить превосходный вкус.</p>
+							<p>Доставка нашего мороженого до заказчиков&nbsp;осуществляется в специальном термопаке, который не дает мороженому растаять&nbsp;в пути и позволяет сохранить превосходный вкус.</p>
 						</div>
 					</div>
 				</div>
 				<div class="news">
 					<div class="news-block news-left">
 						<span class="name">Новое в нашем блоге</span>
-						<a href="#" class="news-title link-color">10 способов сервировки фруктовых щербетов к&nbspстолу</a>
+						<a href="#" class="news-title link-color">10 способов сервировки фруктовых щербетов к&nbsp;столу</a>
 					</div>
 					<div class="news-block news-right clearfix">
-					<div class="news-right-content clearfix">
-						<div class="sub-text">Подпишись на нашу сладкую рассылку и&nbspбудете&nbspвсегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
-						<form action="#" method="post">
-						<div class="news-email">
-							<input type="email" name="email" id="email">
-							<div class="label-box">
-								<label for="email">Электронная почта</label>
-							</div>
+						<div class="news-right-content clearfix">
+							<div class="sub-text">Подпишись на нашу сладкую рассылку и&nbsp;будете&nbsp;всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
+							<form action="#" method="post">
+								<div class="news-email">
+									<input type="email" name="email" id="email-news">
+									<div class="label-box">
+										<label for="email-news">Электронная почта</label>
+									</div>
+								</div>
+								<div class="news-submit">
+									<input type="submit" value="Отправить" class="button">
+								</div>
+							</form>
 						</div>
-						<div class="news-submit">
-							<input type="submit" value="Отправить" class="button">
-						</div>
-						</form>
 					</div>
-				</div>
 				</div>
 		</div>
 		<div class="map">
@@ -215,12 +215,12 @@
 				</section>
 				<section class="footer-menu">
 					<div class="footer-menu-left">
-						<a href="#" class="footer-active">Для&nbspпоставщиков</a>
-						<a href="#">О&nbspпроизводстве</a>
+						<a href="#" class="footer-active">Для&nbsp;поставщиков</a>
+						<a href="#">О&nbsp;производстве</a>
 					</div>
 					<div class="footer-menu-right">
-						<a href="#">Наши&nbspдокументы</a>
-						<a href="#"> Экологические&nbspстандарты</a>
+						<a href="#">Наши&nbsp;документы</a>
+						<a href="#"> Экологические&nbsp;стандарты</a>
 					</div>
 				</section>
 				<section class="html-academy">
@@ -241,9 +241,9 @@
 			<div class="label-box">
 				<label for="name">Как вас зовут?</label>
 			</div>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email-feedback">
 			<div class="label-box">
-				<label for="email">Ваша почта для ответа</label>
+				<label for="email-feedback">Ваша почта для ответа</label>
 			</div>
 			<textarea name="feedback-text" cols="30" rows="8" placeholder="Напишите что-нибудь..."></textarea>
 			<input type="submit" value="Отправить" class="button">
@@ -276,5 +276,4 @@
 		back.classList.remove("back-show");
 	})
 </script>
-
 </html>
