--- a/catalog.html
+++ b/catalog.html
@@ -5,29 +5,28 @@
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet"> 
 </head>
-
 <body>
 	<div class="wrapper-inner">
 		<div class="container clearfix">
 			<header class="main-header">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
-						<a href="index.html"><img src="img/index/logo.svg" alt=""></a>
+						<a href="index.html"><img src="img/index/logo.svg" alt="лого"></a>
 					</div>
 					<ul class="main-menu">
-						<li class="main-menu-active"><a href="#">Каталог</a>
+						<li class="main-menu-option"><a href="#" class="catalog-menu-show main-menu-active">Каталог</a>
 							<ul class="catalog-menu">
-								<li><a href="#" class="catalog-menu-new">Новинки</a></li>
-								<li><a class="catalog-menu-active">Сливочное</a></li>
-								<li><a href="#">Щербеты</a></li>
-								<li><a href="#">Фруктовый лед</a></li>
-								<li><a href="#" class="catalog-menu-last">Мелорин</a></li>
+								<li class="catalog-menu-option"><a href="#" class="catalog-menu-new">Новинки</a></li>
+								<li class="catalog-menu-option"><a href="catalog.html" class="catalog-menu-active">Сливочное</a></li>
+								<li class="catalog-menu-option"><a href="#">Щербеты</a></li>
+								<li class="catalog-menu-option"><a href="#">Фруктовый лед</a></li>
+								<li class="catalog-menu-option"><a href="#" class="catalog-menu-last">Мелорин</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Доставка и оплата</a></li>
-						<li><a href="#">О Компании</a></li>
+						<li class="main-menu-option"><a href="#"><span>Доставка и оплата</span></a></li>
+						<li class="main-menu-option"><a href="#"><span>О Компании</span></a></li>
 					</ul>
 				</nav>
 				<div class="user-block">
@@ -35,7 +34,7 @@
 						<a href="#" class="search-icon"></a>
 						<div class="search-hover">
 							<form action="#" method="get">
-								<input type="search" name="search" id="search">
+								<input type="search" name="search" id="search" required>
 								<div class="label-box">
 									<label for="search">Что ищем?</label>
 								</div>
@@ -46,31 +45,33 @@
 						<a href="#" class="login-icon">Вход</a>
 						<div class="user-hover">
 							<form action="#" method="post">
-								<input type="email" name="email" id="email-login">
+								<input type="text" name="email" id="email-login" required>
 								<div class="label-box">
 									<label for="email-login">Электронная почта</label>
 								</div>
-								<input type="password" name="password" id="password">
+								<input type="password" name="password" id="password" required>
 								<div class="label-box">
 									<label for="password">Пароль</label>
 								</div>
 								<input type="submit" name="login" value="Войти" class="button">
-								<a href="#">Забыли пароль?</a>
-								<a href="#">Новая регистрация</a>
+								<a href="#" class="user-hover-point">Забыли пароль?</a>
+								<a href="#" class="user-hover-point">Новая регистрация</a>
 							</form>
 						</div>
 					</div>
-					<div class="basket">
-						<a href="#" class="basket-icon basket-fill">2 товара</a>
+					<div class="basket basket-fill">
+						<a href="#" class="basket-icon">2 товара</a>
 						<div class="basket-hover">
 							<table class="basket-hover-back">
 								<tr>
+									<td><a href="" class="basket-delete"></a></td>
 									<td class="basket-img"><img src="img/index/1.png" width="33" height="33" alt=""></td>
 									<td class="basket-title">Пломбир с апельсиновым джемом</td>
 									<td class="basket-price">1,5 кг x 200 руб.</td>
 									<td class="basket-concl">300 руб.</td>
 								</tr>
 								<tr>
+									<td><a href="" class="basket-delete"></a></td>
 									<td class="basket-img"><img src="img/index/3.png" width="33" height="33" alt=""></td>
 									<td class="basket-title">Клубничный пломбир с присыпкой из белого шоколада</td>
 									<td class="basket-price">1,5 кг x 300 руб.</td>
@@ -304,5 +305,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
