--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Глейси</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-
 <body>
 	<input type="radio" id="btn-1" name="toggle" checked>
 	<input type="radio" id="btn-2" name="toggle">
@@ -20,17 +19,17 @@
 						<img src="img/index/logo.svg" alt="">
 					</div>
 					<ul class="main-menu">
-						<li><a href="#">Каталог</a>
+						<li class="main-menu-option"><a href="#" class="catalog-menu-show"><span>Каталог</span></a>
 							<ul class="catalog-menu">
-								<li><a href="#" class="catalog-menu-new">Новинки</a></li>
-								<li><a href="catalog.html">Сливочное</a></li>
-								<li><a href="#">Щербеты</a></li>
-								<li><a href="#">Фруктовый лед</a></li>
-								<li><a href="#" class="catalog-menu-last">Мелорин</a></li>
+								<li class="catalog-menu-option"><a href="#" class="catalog-menu-new">Новинки</a></li>
+								<li class="catalog-menu-option"><a href="catalog.html">Сливочное</a></li>
+								<li class="catalog-menu-option"><a href="#">Щербеты</a></li>
+								<li class="catalog-menu-option"><a href="#">Фруктовый лед</a></li>
+								<li class="catalog-menu-option"><a href="#" class="catalog-menu-last">Мелорин</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Доставка и оплата</a></li>
-						<li><a href="#">О Компании</a></li>
+						<li class="main-menu-option"><a href="#"><span>Доставка и оплата</span></a></li>
+						<li class="main-menu-option"><a href="#"><span>О Компании</span></a></li>
 					</ul>
 				</nav>
 				<div class="user-block">
@@ -38,7 +37,7 @@
 						<a href="#" class="search-icon"></a>
 						<div class="search-hover">
 							<form action="#" method="get">
-								<input type="search" name="search" id="search">
+								<input type="search" name="search" id="search" required>
 								<div class="label-box">
 									<label for="search">Что ищем?</label>
 								</div>
@@ -49,17 +48,17 @@
 						<a href="#" class="login-icon">Вход</a>
 						<div class="user-hover">
 							<form action="#" method="post">
-								<input type="email" name="email" id="email-login">
+								<input type="text" name="email" id="email-login" required>
 								<div class="label-box">
 									<label for="email-login">Электронная почта</label>
 								</div>
-								<input type="password" name="password" id="password">
+								<input type="password" name="password" id="password" required>
 								<div class="label-box">
 									<label for="password">Пароль</label>
 								</div>
 								<input type="submit" name="login" value="Войти" class="button">
-								<a href="#">Забыли пароль?</a>
-								<a href="#">Новая регистрация</a>
+								<a href="#" class="user-hover-point">Забыли пароль?</a>
+								<a href="#" class="user-hover-point">Новая регистрация</a>
 							</form>
 						</div>
 					</div>
@@ -177,7 +176,7 @@
 							<div class="sub-text">Подпишись на нашу сладкую рассылку и&nbsp;будете&nbsp;всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
 							<form action="#" method="post">
 								<div class="news-email">
-									<input type="email" name="email" id="email-news">
+									<input type="text" name="email" id="email-news" required>
 									<div class="label-box">
 										<label for="email-news">Электронная почта</label>
 									</div>
@@ -189,24 +188,25 @@
 						</div>
 					</div>
 				</div>
-		</main>
+			</main>
+			<div class="feedback-form">
+				<span class="feedback-form-title">Адрес главного офиса и
+                      офлайн магазина:</span>
+				<span class="feeback-form-info">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+				<span class="feedback-form-title">Для заказов по телефону:</span>
+				<span class="feeback-form-info">8 812 450-25-25</span>
+				<span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
+				<div>
+					<a href="#" class="button feedback-form-btn">Форма обратной связи</a>
+				</div>
+			</div>
 		</div>
 		<div class="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<img src="img/index/map.jpg" alt="" class="map-img">
 		</div>
 		<div class="container clearfix">
 			<footer class="main-footer">
-				<div class="feedback-form">
-					<span class="feedback-form-title">Адрес главного офиса и
-                      офлайн магазина:</span>
-					<span class="feeback-form-info">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-					<span class="feedback-form-title">Для заказов по телефону:</span>
-					<span class="feeback-form-info">8 812 450-25-25</span>
-					<span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
-					<form action="#" method="get">
-						<input type="submit" value="Форма обратной связи" class="button feedback-form-btn">
-					</form>
-				</div>
 				<section class="social">
 					<a href="#" class="social-btn social-btn-tw"></a>
 					<a href="#" class="social-btn social-btn-inst"></a>
@@ -237,11 +237,11 @@
 		<div class="feedback-close"></div>
 		<span class="feedback-title">Мы обязательно вам ответим!</span>
 		<form action="#" method="get">
-			<input type="text" id="name">
+			<input type="text" id="name" required>
 			<div class="label-box">
 				<label for="name">Как вас зовут?</label>
 			</div>
-			<input type="email" name="email" id="email-feedback">
+			<input type="text" name="email" id="email-feedback" required>
 			<div class="label-box">
 				<label for="email-feedback">Ваша почта для ответа</label>
 			</div>
@@ -249,30 +249,6 @@
 			<input type="submit" value="Отправить" class="button">
 		</form>
 	</div>
-	<script>
-		var link = document.querySelector(".feedback-form-btn");
-		var popup = document.querySelector(".feedback");
-		var close = popup.querySelector(".feedback-close");
-		var login = popup.querySelector("[name-login]");
-		var back = document.querySelector(".back");
-
-		link.addEventListener("click", function (event) {
-			event.preventDefault();
-			popup.classList.add("feedback-show");
-			login.focus();
-		})
-		link.addEventListener("click", function (event) {
-			event.preventDefault();
-			back.classList.add("back-show");
-		})
-		close.addEventListener("click", function (event) {
-			event.preventDefault();
-			popup.classList.remove("feedback-show");
-		})
-		close.addEventListener("click", function (event) {
-			event.preventDefault();
-			back.classList.remove("back-show");
-		})
-	</script>
+	<script type="text/javascript" src="js/.min.js"></script>
 </body>
 </html>
