--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Глейси</title>
-	<link rel="stylesheet" href="css/.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
@@ -249,6 +249,6 @@
 			<input type="submit" value="Отправить" class="button">
 		</form>
 	</div>
-	<script type="text/javascript" src="js/.min.js"></script>
+	<script type="text/javascript" src="js/script.min.js"></script>
 </body>
 </html>
