--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet"> 
 </head>
 <body>
