--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
 	<link rel="stylesheet" href="css/style.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper-inner">
@@ -25,8 +25,8 @@
 								<li class="catalog-menu-option"><a href="#" class="catalog-menu-last">Мелорин</a></li>
 							</ul>
 						</li>
-						<li class="main-menu-option"><a href="#"><span>Доставка и оплата</span></a></li>
-						<li class="main-menu-option"><a href="#"><span>О Компании</span></a></li>
+						<li class="main-menu-option"><a href="#">Доставка и оплата</a></li>
+						<li class="main-menu-option"><a href="#">О Компании</a></li>
 					</ul>
 				</nav>
 				<div class="user-block">
