--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Глейси</title>
 	<link rel="stylesheet" href="css/style.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 	<input type="radio" id="btn-1" name="toggle" checked>
@@ -19,7 +18,7 @@
 						<img src="img/index/logo.svg" alt="">
 					</div>
 					<ul class="main-menu">
-						<li class="main-menu-option"><a href="#" class="catalog-menu-show"><span>Каталог</span></a>
+						<li class="main-menu-option"><a href="#" class="catalog-menu-show">Каталог</a>
 							<ul class="catalog-menu">
 								<li class="catalog-menu-option"><a href="#" class="catalog-menu-new">Новинки</a></li>
 								<li class="catalog-menu-option"><a href="catalog.html">Сливочное</a></li>
@@ -28,8 +27,8 @@
 								<li class="catalog-menu-option"><a href="#" class="catalog-menu-last">Мелорин</a></li>
 							</ul>
 						</li>
-						<li class="main-menu-option"><a href="#"><span>Доставка и оплата</span></a></li>
-						<li class="main-menu-option"><a href="#"><span>О Компании</span></a></li>
+						<li class="main-menu-option"><a href="#">Доставка и оплата</a></li>
+						<li class="main-menu-option"><a href="#">О Компании</a></li>
 					</ul>
 				</nav>
 				<div class="user-block">
@@ -197,7 +196,7 @@
 				<span class="feeback-form-info">8 812 450-25-25</span>
 				<span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
 				<div>
-					<a href="#" class="button feedback-form-btn">Форма обратной связи</a>
+					<a href="feedback.html" class="button feedback-form-btn">Форма обратной связи</a>
 				</div>
 			</div>
 		</div>
@@ -232,7 +231,6 @@
 			</footer>
 		</div>
 	</div>
-	<div class="back"></div>
 	<div class="feedback clearfix">
 		<div class="feedback-close"></div>
 		<span class="feedback-title">Мы обязательно вам ответим!</span>
