--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
-	<link rel="stylesheet" href="css/style.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<div class="wrapper-inner">
@@ -13,7 +13,7 @@
 			<header class="main-header">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
-						<a href="index.html"><img src="img/index/logo.svg" alt="лого"></a>
+						<a href="index.html"><img src="img/index/logo.svg" alt="Логотип"></a>
 					</div>
 					<ul class="main-menu">
 						<li class="main-menu-option"><a href="#" class="catalog-menu-show main-menu-active">Каталог</a>
@@ -287,12 +287,12 @@
 				</section>
 				<section class="footer-menu">
 					<div class="footer-menu-left">
-						<a href="#" class="footer-active">Для&nbsp;поставщиков</a>
+						<a href="#" class="footer-active">Для поставщиков</a>
 						<a href="#">О&nbsp;производстве</a>
 					</div>
 					<div class="footer-menu-right">
-						<a href="#">Наши&nbsp;документы</a>
-						<a href="#">Экологические&nbsp;стандарты</a>
+						<a href="#">Наши документы</a>
+						<a href="#">Экологические стандарты</a>
 					</div>
 				</section>
 				<section class="html-academy">
