--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Глейси</title>
-	<link rel="stylesheet" href="css/style.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<input type="radio" id="btn-1" name="toggle" checked>
@@ -15,7 +15,7 @@
 			<header class="main-header">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
-						<img src="img/index/logo.svg" alt="">
+						<img src="img/index/logo.svg" alt="Логотип">
 					</div>
 					<ul class="main-menu">
 						<li class="main-menu-option"><a href="#" class="catalog-menu-show">Каталог</a>
@@ -73,7 +73,7 @@
 				<div class="slider">
 					<div class="slide" id="slide1">
 						<h1 class="slide-title"> Крем-брюле и пломбир 
-                           с&nbsp;малиновым джемом</h1>
+                           с малиновым джемом</h1>
 						<a href="#" class="slider-button">Давайте оба!</a>
 					</div>
 					<div class="slide" id="slide2">
@@ -95,7 +95,7 @@
 				<div class="stocks">
 					<section class="stock stock-left clearfix">
 						<h2>Малинка даром!</h2>
-						<p>При покупке 2 кг любого фруктового мороженого, добавим в&nbsp;ваш заказ банку малинового варенья бесплатно</p>
+						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
 						<a href="#" class="button">Хочу варенье!</a>
 					</section>
 					<section class="stock stock-right">
@@ -150,18 +150,18 @@
 					<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
 					<div class="features-left">
 						<div class="feature feature-ice-icon">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbsp;современного оборудования&nbsp;и проверенных временем технологий.</p>
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 						</div>
 						<div class="feature feature-nature-icon">
-							<p>Для приготовления мороженого используются&nbsp;настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 						</div>
 					</div>
 					<div class="features-right">
 						<div class="feature feature-meat-icon">
-							<p>Закупка ингредиентов производится только у&nbsp;проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+							<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						</div>
 						<div class="feature feature-ship-icon">
-							<p>Доставка нашего мороженого до заказчиков&nbsp;осуществляется в специальном термопаке, который не дает мороженому растаять&nbsp;в пути и позволяет сохранить превосходный вкус.</p>
+							<p>Доставка нашего мороженого до заказчиков осуществляется в&nbsp;специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 						</div>
 					</div>
 				</div>
@@ -172,7 +172,7 @@
 					</div>
 					<div class="news-block news-right clearfix">
 						<div class="news-right-content clearfix">
-							<div class="sub-text">Подпишись на нашу сладкую рассылку и&nbsp;будете&nbsp;всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
+							<div class="sub-text">Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</div>
 							<form action="#" method="post">
 								<div class="news-email">
 									<input type="text" name="email" id="email-news" required>
@@ -214,12 +214,12 @@
 				</section>
 				<section class="footer-menu">
 					<div class="footer-menu-left">
-						<a href="#" class="footer-active">Для&nbsp;поставщиков</a>
+						<a href="#" class="footer-active">Для поставщиков</a>
 						<a href="#">О&nbsp;производстве</a>
 					</div>
 					<div class="footer-menu-right">
-						<a href="#">Наши&nbsp;документы</a>
-						<a href="#"> Экологические&nbsp;стандарты</a>
+						<a href="#">Наши документы</a>
+						<a href="#"> Экологические стандарты</a>
 					</div>
 				</section>
 				<section class="html-academy">
@@ -232,8 +232,8 @@
 		</div>
 	</div>
 	<div class="feedback clearfix">
-		<div class="feedback-close"></div>
-		<span class="feedback-title">Мы обязательно вам ответим!</span>
+		<a class="feedback-close"></a>
+		<h3 class="feedback-title">Мы обязательно вам ответим!</h3>
 		<form action="#" method="get">
 			<input type="text" id="name" required>
 			<div class="label-box">
