--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
 				</div>
 				<div class="features clearfix">
 					<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-					<div class="features-left">
-						<div class="feature feature-ice-icon">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+					<div class="features-top clearfix">
+						<div class="feature feature-left feature-ice-icon">
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbsp;современного оборудования и&nbsp;проверенных временем технологий.</p>
 						</div>
-						<div class="feature feature-nature-icon">
-							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-						</div>
-					</div>
-					<div class="features-right">
-						<div class="feature feature-meat-icon">
+						<div class="feature feature-right feature-meat-icon">
 							<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						</div>
-						<div class="feature feature-ship-icon">
+					</div>
+					<div class="features-bottom clearfix">
+						<div class="feature feature-left feature-nature-icon">
+							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+						</div>
+						<div class="feature feature-right feature-ship-icon">
 							<p>Доставка нашего мороженого до заказчиков осуществляется в&nbsp;специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 						</div>
 					</div>
