--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper-inner">
