--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
 					<div class="features-top clearfix">
 						<div class="feature feature-left feature-ice-icon">
-							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbsp;современного оборудования и&nbsp;проверенных временем технологий.</p>
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbsp;современного оборудования и проверенных временем технологий.</p>
 						</div>
 						<div class="feature feature-right feature-meat-icon">
 							<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
@@ -187,18 +187,18 @@
 						</div>
 					</div>
 				</div>
-			</main>
-			<div class="feedback-form">
-				<span class="feedback-form-title">Адрес главного офиса и
-                      офлайн магазина:</span>
-				<span class="feeback-form-info">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-				<span class="feedback-form-title">Для заказов по телефону:</span>
-				<span class="feeback-form-info">8 812 450-25-25</span>
-				<span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
-				<div>
-					<a href="feedback.html" class="button feedback-form-btn">Форма обратной связи</a>
+				<div class="feedback-form">
+					<span class="feedback-form-title">Адрес главного офиса и
+						  офлайн магазина:</span>
+					<span class="feeback-form-info">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+					<span class="feedback-form-title">Для заказов по телефону:</span>
+					<span class="feeback-form-info">8 812 450-25-25</span>
+					<span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
+					<div>
+						<a href="feedback.html" class="button feedback-form-btn">Форма обратной связи</a>
+					</div>
 				</div>
-			</div>
+			</main>
 		</div>
 		<div class="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
